K8s/base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lumina-backend-service
  labels:
    app: lumina-backend
spec:
  type: ClusterIP
  selector:
    app: lumina-backend
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
